saved work on threat field

--- a/src/navigation/ground/traffic_sim/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/CMakeLists.txt
@@ -5,9 +5,10 @@
 set(TRAFFIC_SIM_LIB_SRC
     src/vehicle_sim.cpp
     src/traffic_sim.cpp
+    src/vehicle_motion.cpp
 )
 add_library(trafficsim STATIC ${TRAFFIC_SIM_LIB_SRC})
-target_link_libraries(trafficsim roadmap utilities)
+target_link_libraries(trafficsim roadmap traffic utilities)
 target_include_directories(trafficsim PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
