--- a/src/publication/connectivity_selection/CMakeLists.txt
+++ b/src/publication/connectivity_selection/CMakeLists.txt
@@ -20,6 +20,9 @@ target_link_libraries(pub_roadmap_grid traffic ugvnav_viz)
 add_executable(pub_lane_occupancy pub_lane_occupancy.cpp)
 target_link_libraries(pub_lane_occupancy traffic ugvnav_viz)
 
+add_executable(pub_vehicle_threat pub_vehicle_threat.cpp)
+target_link_libraries(pub_vehicle_threat traffic ugvnav_viz)
+
 add_executable(pub_lattice_graph pub_lattice_graph.cpp)
 target_link_libraries(pub_lattice_graph lattice lattice_planner ugvnav_viz utilities)
 
