--- a/src/navigation/ground/threat_field/tests/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/tests/CMakeLists.txt
@@ -25,3 +25,6 @@ target_link_libraries(test_threat_field tfield ugvnav_viz utilities)
 
 add_executable(test_threat_field_history test_threat_field_history.cpp)
 target_link_libraries(test_threat_field_history tfield ugvnav_viz utilities)
+
+add_executable(test_threat_exposure test_threat_exposure.cpp)
+target_link_libraries(test_threat_exposure tfield lattice_planner ugvnav_viz utilities)
