--- a/src/navigation/ground/threat_field/apps/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/apps/CMakeLists.txt
@@ -5,5 +5,5 @@
 add_executable(app_calc_transition app_calc_transition.cpp)
 target_link_libraries(app_calc_transition tfield ugvnav_viz utilities)
 
-# add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
-# target_link_libraries(app_calc_interval_trans tfield ugvnav_viz utilities)
+add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
+target_link_libraries(app_calc_interval_trans tfield ugvnav_viz utilities)
