--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(reachability)
 add_subdirectory(state_lattice)
 add_subdirectory(lattice_planner)
 add_subdirectory(threat_field)
+add_subdirectory(connectivity)
 add_subdirectory(traffic_sim)
 
 add_subdirectory(ugvnav_viz)
