updated threat field of vehicle

--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -41,13 +41,13 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(road_map)
 add_subdirectory(traffic_map)
 add_subdirectory(reachability)
-# add_subdirectory(state_lattice)
-# add_subdirectory(lattice_planner)
+add_subdirectory(state_lattice)
+add_subdirectory(lattice_planner)
 add_subdirectory(threat_field)
 # add_subdirectory(connectivity)
 # add_subdirectory(traffic_sim)
 
-# add_subdirectory(ugvnav_viz)
+add_subdirectory(ugvnav_viz)
 
 
 
