--- a/src/navigation/ground/threat_field/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/CMakeLists.txt
@@ -6,7 +6,7 @@ set(TFIELD_LIB_SRC
     src/vehicle_estimation.cpp
     src/dynamic_threat_model.cpp
     src/vehicle_threat.cpp
-    # src/threat_field.cpp
+    src/threat_field.cpp
 )
 add_library(tfield STATIC ${TFIELD_LIB_SRC})
 target_link_libraries(tfield common decomp graph traffic reachability)
