changed to use TBB for parallel computing

--- a/src/kernel/vizcore/lightviz/CMakeLists.txt
+++ b/src/kernel/vizcore/lightviz/CMakeLists.txt
@@ -2,6 +2,9 @@
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
+find_package(TBB REQUIRED)
+include_directories(${TBB_INCLUDE_DIRS})
+
 ## Add libraries
 # LightViz library
 set(LIGHTVIZ_LIB_SRC
@@ -14,7 +17,7 @@ set(LIGHTVIZ_LIB_SRC
 	src/curve_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
-target_link_libraries(lightviz decomp graph geometry canvas pthread)
+target_link_libraries(lightviz decomp graph geometry canvas pthread ${TBB_LIBRARIES})
 target_include_directories(lightviz PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
