--- a/src/navigation/ground/CMakeLists.txt
+++ b/src/navigation/ground/CMakeLists.txt
@@ -42,7 +42,7 @@ add_subdirectory(road_map)
 add_subdirectory(traffic_map)
 add_subdirectory(reachability)
 add_subdirectory(state_lattice)
-add_subdirectory(lattice_planner)
+add_subdirectory(local_planner)
 add_subdirectory(threat_field)
 add_subdirectory(connectivity)
 # add_subdirectory(traffic_sim)
