--- a/src/navigation/ground/local_planner/tests/CMakeLists.txt
+++ b/src/navigation/ground/local_planner/tests/CMakeLists.txt
@@ -11,5 +11,8 @@ target_link_libraries(test_lattice_graph_search local_planner ugvnav_viz utiliti
 add_executable(test_lattice_threat test_lattice_threat.cpp)
 target_link_libraries(test_lattice_threat local_planner ugvnav_viz utilities)
 
-add_executable(test_lattice_trajectory test_lattice_trajectory.cpp)
-target_link_libraries(test_lattice_trajectory local_planner ugvnav_viz utilities)
+add_executable(test_reference_trajectory test_reference_trajectory.cpp)
+target_link_libraries(test_reference_trajectory local_planner ugvnav_viz utilities)
+
+add_executable(test_lookahead_zone test_lookahead_zone.cpp)
+target_link_libraries(test_lookahead_zone local_planner ugvnav_viz utilities)
