lookahead zone can be modeled as a curvilinear grid now

--- a/src/navigation/ground/local_planner/CMakeLists.txt
+++ b/src/navigation/ground/local_planner/CMakeLists.txt
@@ -11,7 +11,7 @@ set(LATTICE_PLANNER_LIB_SRC
   src/lookahead_zone.cpp
 )
 add_library(local_planner STATIC ${LATTICE_PLANNER_LIB_SRC})
-target_link_libraries(local_planner lattice graph traffic tfield utilities)
+target_link_libraries(local_planner decomp lattice graph traffic tfield utilities)
 target_include_directories(local_planner PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
