lookahead zone around ref trajectory works

--- a/src/kernel/vizcore/lightviz/CMakeLists.txt
+++ b/src/kernel/vizcore/lightviz/CMakeLists.txt
@@ -11,7 +11,7 @@ set(LIGHTVIZ_LIB_SRC
 	src/cartesian_canvas.cpp
 	src/matrix_draw.cpp
 	src/geometry_draw.cpp
-	src/curvilinear_grid_draw.cpp
+	# src/curvilinear_grid_draw.cpp
 	src/matrix_viz.cpp
 	src/polygon_viz.cpp
 	src/curve_viz.cpp
