--- a/src/navigation/ground/connectivity/tests/CMakeLists.txt
+++ b/src/navigation/ground/connectivity/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(test_threat_exposure connectivity ugvnav_viz utilities)
 
 add_executable(test_evaluation test_evaluation.cpp)
 target_link_libraries(test_evaluation connectivity ugvnav_viz utilities)
+
+add_executable(test_evaluation2 test_evaluation2.cpp)
+target_link_libraries(test_evaluation2 connectivity ugvnav_viz utilities)
