--- a/src/navigation/ground/connectivity/tests/CMakeLists.txt
+++ b/src/navigation/ground/connectivity/tests/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(test_evaluation connectivity ugvnav_viz utilities)
 
 add_executable(test_evaluation2 test_evaluation2.cpp)
 target_link_libraries(test_evaluation2 connectivity ugvnav_viz utilities)
+
+add_executable(test_evaluation3 test_evaluation3.cpp)
+target_link_libraries(test_evaluation3 connectivity ugvnav_viz utilities)
