saved work on imgui

--- a/src/kernel/planning/decomp/CMakeLists.txt
+++ b/src/kernel/planning/decomp/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(decomp INTERFACE geometry)
 endif()
 target_include_directories(decomp INTERFACE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
   $<INSTALL_INTERFACE:include>)
 
 # Add tests
