--- a/src/rav_viewer/lightview/CMakeLists.txt
+++ b/src/rav_viewer/lightview/CMakeLists.txt
@@ -1,12 +1,14 @@
-# Dependency libraries
-#find_package(LIBRARY_NAME REQUIRED)
+## Dependency libraries
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIR})
 
 # Add libraries
 set(LIGHTVIEW_LIB_SRC
-    src/lightview.cpp
+    src/viewer_utils.cpp
+    src/lightviewer.cpp
 )
 add_library(lightview STATIC ${LIGHTVIEW_LIB_SRC})
-target_link_libraries(lightview common utilities ${LCM_LIBRARIES})
+target_link_libraries(lightview common utilities imgui ${OpenCV_LIBS} ${LCM_LIBRARIES})
 target_include_directories(lightview PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
