--- a/src/rav_viewer/lightview/tests/CMakeLists.txt
+++ b/src/rav_viewer/lightview/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(test_lightview test_lightview.cpp)
-target_link_libraries(test_lightview markov)
+target_link_libraries(test_lightview lightview)
 
 add_executable(test_imgui test_imgui.cpp)
 target_link_libraries(test_imgui imgui)
