--- a/src/kernel/datalink/CMakeLists.txt
+++ b/src/kernel/datalink/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(librav_decision)
+project(librav_datalink)
 
 ## Set compiler to use c++ 11 features
 include(CheckCXXCompilerFlag)
@@ -35,4 +35,4 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
-add_subdirectory(markov)
+add_subdirectory(lcm_link)
