--- a/src/kernel/device/driver/socketcan/CMakeLists.txt
+++ b/src/kernel/device/driver/socketcan/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SOCKETCAN_LIB_SRC
 add_library(socketcan STATIC ${SOCKETCAN_LIB_SRC})
 # target_link_libraries(socketcan -lpthread)
 target_include_directories(socketcan PUBLIC
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>
 	PRIVATE src)
 
