--- a/src/kernel/planning/CMakeLists.txt
+++ b/src/kernel/planning/CMakeLists.txt
@@ -25,21 +25,10 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-## Find LCM
-find_package(LCM REQUIRED)
-if(LCM_NOT_FOUND)
-  message(STATUS "LCM is not found. Inter-process communication depends on LCM.")
-endif(LCM_NOT_FOUND)
-# Include files for LCM
-set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
-include_directories(${LCM_GENERATED_HEADER_PATH})
-
 ## Add other sub source directories
-add_subdirectory(legacy)
-
 add_subdirectory(geometry)
 add_subdirectory(decomp)
-add_subdirectory(tree)
+# add_subdirectory(tree)
 add_subdirectory(graph)
 add_subdirectory(random)
 add_subdirectory(rrt_search)
