--- a/src/kernel/examples/CMakeLists.txt
+++ b/src/kernel/examples/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Add executables
 add_executable(lcm_subscriber_cpp src/lcm_subscriber.cpp)
-target_link_libraries(lcm_subscriber_cpp ${LCM_LIBRARIES})
+target_link_libraries(lcm_subscriber_cpp datalink)
 
 add_executable(lcm_publisher_cpp src/lcm_publisher.cpp)
-target_link_libraries(lcm_publisher_cpp ${LCM_LIBRARIES})
+target_link_libraries(lcm_publisher_cpp datalink)
 
 add_executable(logger_example src/logger_example.cpp)
 target_link_libraries(logger_example utilities)
