--- a/src/platforms/rc_car/driver/CMakeLists.txt
+++ b/src/platforms/rc_car/driver/CMakeLists.txt
@@ -6,7 +6,7 @@ set(RCCAR_DRIVER_LIB_SRC
 	src/imu_neo.cpp
 )
 add_library(rccar_driver STATIC ${RCCAR_DRIVER_LIB_SRC})
-target_link_libraries(rccar_driver common sensors utilities ${LCM_LIBRARIES})
+target_link_libraries(rccar_driver common sensors utilities datalink)
 target_include_directories(rccar_driver PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
   $<INSTALL_INTERFACE:include>
