--- a/src/rav_viewer/lightview/CMakeLists.txt
+++ b/src/rav_viewer/lightview/CMakeLists.txt
@@ -8,7 +8,7 @@ set(LIGHTVIEW_LIB_SRC
     src/lightviewer.cpp
 )
 add_library(lightview STATIC ${LIGHTVIEW_LIB_SRC})
-target_link_libraries(lightview common utilities imgui ${OpenCV_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(lightview common utilities imgui datalink ${OpenCV_LIBS})
 target_include_directories(lightview PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
