--- a/src/kernel/utilities/tests/CMakeLists.txt
+++ b/src/kernel/utilities/tests/CMakeLists.txt
@@ -3,4 +3,4 @@
 
 ## tests
 add_executable(test_imageio test_imageio.cpp)
-target_link_libraries(test_imageio utilities lightviz)
+target_link_libraries(test_imageio utils lightviz)
