--- a/src/navigation/aerial/polyopt/CMakeLists.txt
+++ b/src/navigation/aerial/polyopt/CMakeLists.txt
@@ -1,10 +1,12 @@
+## Find Eigen3
+find_package(Eigen3 REQUIRED)
+
 ## Find Gurobi
 find_package(GUROBI QUIET)
 if (NOT GUROBI_FOUND)
   message("-- Gurobi not found. Trajectory optimization will not be built.")
 else()
   message("-- Gurobi found")
-  include_directories(${GUROBI_INCLUDE_DIRS})
 endif()
 
 # Add libraries
@@ -20,6 +22,8 @@ add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
 target_link_libraries(polyopt common gurobi_cpp ${GUROBI_LIBRARIES})
 target_include_directories(polyopt PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
+    $<BUILD_INTERFACE:${GUROBI_INCLUDE_DIRS}>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 endif()
