--- a/src/navigation/ground/road_map/tests/CMakeLists.txt
+++ b/src/navigation/ground/road_map/tests/CMakeLists.txt
@@ -3,16 +3,16 @@
 
 ## tests
 add_executable(test_roadmap_internal test_roadmap_internal.cpp)
-target_link_libraries(test_roadmap_internal roadmap lightviz utilities)
+target_link_libraries(test_roadmap_internal roadmap lightviz utils)
 
 add_executable(test_roadmap test_roadmap.cpp)
-target_link_libraries(test_roadmap roadmap lightviz ugvnav_viz utilities)
+target_link_libraries(test_roadmap roadmap lightviz ugvnav_viz utils)
 
 add_executable(test_roadmap2 test_roadmap2.cpp)
-target_link_libraries(test_roadmap2 roadmap lightviz ugvnav_viz utilities)
+target_link_libraries(test_roadmap2 roadmap lightviz ugvnav_viz utils)
 
 add_executable(test_topogeo_graph test_topogeo_graph.cpp)
-target_link_libraries(test_topogeo_graph roadmap lightviz utilities)
+target_link_libraries(test_topogeo_graph roadmap lightviz utils)
 
 # add_executable(test_lane_intersection test_lane_intersection.cpp)
-# target_link_libraries(test_lane_intersection roadmap lightviz utilities)
+# target_link_libraries(test_lane_intersection roadmap lightviz utils)
