--- a/src/navigation/ground/threat_field/apps/CMakeLists.txt
+++ b/src/navigation/ground/threat_field/apps/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ## tests
 add_executable(app_calc_transition app_calc_transition.cpp)
-target_link_libraries(app_calc_transition tfield ugvnav_viz utilities)
+target_link_libraries(app_calc_transition tfield ugvnav_viz utils)
 
 add_executable(app_calc_interval_trans app_calc_interval_trans.cpp)
-target_link_libraries(app_calc_interval_trans tfield ugvnav_viz utilities)
+target_link_libraries(app_calc_interval_trans tfield ugvnav_viz utils)
