--- a/src/navigation/ground/traffic_map/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_map/tests/CMakeLists.txt
@@ -3,4 +3,4 @@
 
 ## tests
 add_executable(test_trafficmap test_trafficmap.cpp)
-target_link_libraries(test_trafficmap traffic lightviz ugvnav_viz utilities)
+target_link_libraries(test_trafficmap traffic lightviz ugvnav_viz utils)
