--- a/src/rav_viewer/lightview/CMakeLists.txt
+++ b/src/rav_viewer/lightview/CMakeLists.txt
@@ -1,6 +1,5 @@
 ## Dependency libraries
 find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIR})
 
 # Add libraries
 set(LIGHTVIEW_LIB_SRC
@@ -8,7 +7,7 @@ set(LIGHTVIEW_LIB_SRC
     src/lightviewer.cpp
 )
 add_library(lightview STATIC ${LIGHTVIEW_LIB_SRC})
-target_link_libraries(lightview common utilities imgui datalink ${OpenCV_LIBS})
+target_link_libraries(lightview common utils imgui datalink ${OpenCV_LIBS})
 target_include_directories(lightview PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
