--- a/src/kernel/control/interface/CMakeLists.txt
+++ b/src/kernel/control/interface/CMakeLists.txt
@@ -1,5 +1,9 @@
+## Find Eigen3
+find_package(Eigen3 REQUIRED)
+
 # Add libraries
 add_library(librav_if INTERFACE)
 target_include_directories(librav_if INTERFACE
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
 	$<INSTALL_INTERFACE:include>)
