--- a/src/kernel/examples/CMakeLists.txt
+++ b/src/kernel/examples/CMakeLists.txt
@@ -6,10 +6,10 @@ add_executable(lcm_publisher_cpp src/lcm_publisher.cpp)
 target_link_libraries(lcm_publisher_cpp datalink)
 
 add_executable(logger_example src/logger_example.cpp)
-target_link_libraries(logger_example utilities)
+target_link_libraries(logger_example utils)
 
 add_executable(stopwatch_example src/stopwatch_example.cpp)
-target_link_libraries(stopwatch_example utilities)
+target_link_libraries(stopwatch_example utils)
 
 add_executable(simple_graph_example src/simple_graph_example.cpp)
 target_link_libraries(simple_graph_example graph)
