--- a/src/kernel/planning/random/CMakeLists.txt
+++ b/src/kernel/planning/random/CMakeLists.txt
@@ -1,5 +1,6 @@
 ## Dependency libraries
 find_package(GSL REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 ## Add libraries
 set(RANDOM_LIB_SRC
@@ -10,7 +11,8 @@ add_library(random STATIC ${RANDOM_LIB_SRC})
 target_link_libraries(random ${CGAL_LIBS} ${GSL_LIBRARIES})
 target_include_directories(random PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-	$<BUILD_INTERFACE:${GSL_INCLUDE_DIRS}>
+    $<BUILD_INTERFACE:${GSL_INCLUDE_DIRS}>
+	$<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
 	$<INSTALL_INTERFACE:include>	
 	PRIVATE src)
 
