--- a/src/navigation/ground/connectivity/tests/CMakeLists.txt
+++ b/src/navigation/ground/connectivity/tests/CMakeLists.txt
@@ -3,13 +3,13 @@
 
 ## tests
 add_executable(test_threat_exposure test_threat_exposure.cpp)
-target_link_libraries(test_threat_exposure connectivity ugvnav_viz utilities)
+target_link_libraries(test_threat_exposure connectivity ugvnav_viz utils)
 
 add_executable(test_evaluation test_evaluation.cpp)
-target_link_libraries(test_evaluation connectivity ugvnav_viz utilities)
+target_link_libraries(test_evaluation connectivity ugvnav_viz utils)
 
 add_executable(test_evaluation2 test_evaluation2.cpp)
-target_link_libraries(test_evaluation2 connectivity ugvnav_viz utilities)
+target_link_libraries(test_evaluation2 connectivity ugvnav_viz utils)
 
 add_executable(test_evaluation3 test_evaluation3.cpp)
-target_link_libraries(test_evaluation3 connectivity ugvnav_viz utilities)
+target_link_libraries(test_evaluation3 connectivity ugvnav_viz utils)
