--- a/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
+++ b/src/navigation/ground/traffic_sim/tests/CMakeLists.txt
@@ -3,4 +3,4 @@
 
 ## tests
 # add_executable(test_trafficsim test_trafficsim.cpp)
-# target_link_libraries(test_trafficsim tfield trafficsim utilities)
+# target_link_libraries(test_trafficsim tfield trafficsim utils)
