--- a/src/navigation/ground/ugvnav_viz/tests/CMakeLists.txt
+++ b/src/navigation/ground/ugvnav_viz/tests/CMakeLists.txt
@@ -3,10 +3,10 @@
 
 ## tests
 # add_executable(test_cfield_viz test_cfield_viz.cpp)
-# target_link_libraries(test_cfield_viz tfield ugvnav_viz lightviz utilities)
+# target_link_libraries(test_cfield_viz tfield ugvnav_viz lightviz utils)
 
 add_executable(test_roadmap_viz test_roadmap_viz.cpp)
-target_link_libraries(test_roadmap_viz tfield ugvnav_viz lightviz utilities)
+target_link_libraries(test_roadmap_viz tfield ugvnav_viz lightviz utils)
 
 add_executable(test_traffic_viz test_traffic_viz.cpp)
-target_link_libraries(test_traffic_viz tfield ugvnav_viz lightviz utilities)
+target_link_libraries(test_traffic_viz tfield ugvnav_viz lightviz utils)
