--- a/src/platforms/rc_car/driver/tests/CMakeLists.txt
+++ b/src/platforms/rc_car/driver/tests/CMakeLists.txt
@@ -1,7 +1,3 @@
-# Include path
-include_directories(${CMAKE_SOURCE_DIR}/src)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 # Dependency libraries
 #find_package(LIBRARY_NAME REQUIRED)
 
@@ -10,4 +6,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # target_link_libraries(test_imu_calib sensor utility)
 
 add_executable(test_imu_driver test_imu_driver.cpp)
-target_link_libraries(test_imu_driver rccar_driver utilities)
+target_link_libraries(test_imu_driver rccar_driver utils)
